# gb-parser

./: .gitignore  README.md  gb-convert.skill  pyproject.toml
.claude/skills/gb-convert/: README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
skills/gb-convert/: SKILL.md
src/gb_parser/: __init__.py  cli.py  convert.py  detect.py  fix_garbled.py
src/gb_parser/mappings/: test1.json
