[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gb-parser"
version = "0.1.0"
description = "国标 PDF 结构化转换和英文乱码修复"
requires-python = ">=3.11"
dependencies = [
    "mineru>=2.5",
    "pypdf>=5.0",
]

[project.scripts]
gb-convert = "gb_parser.cli:main_convert"
gb-fix = "gb_parser.cli:main_fix"
gb-detect = "gb_parser.cli:main_detect"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/gb_parser"]
